@@ -1,6 +1,6 @@
 <?php
 
-require '../../Vzaar.php';
+require '../../src/Vzaar.php';
 Vzaar::$token = 'u2nd3DVI71jQ7dTtz9mHA953XeIQeodmZvSE6AbTX8';
 Vzaar::$secret = 'skitsanos';
 
