@@ -3,7 +3,7 @@
  * @author skitsanos
  */
 
-require_once '../Vzaar.php';
+require_once '../src/Vzaar.php';
 
 /**
  * This API call returns a list of the user's active videos along with it's relevant metadata
