@@ -1,7 +1,7 @@
 <?php
 date_default_timezone_set("Europe/London");
 
-require_once '../Vzaar.php';
+require_once '../src/Vzaar.php';
 
 Vzaar::$token = "token";
 Vzaar::$secret = "secret";
