@@ -5,7 +5,7 @@
 
 date_default_timezone_set("Europe/London");
 
-require_once '../Vzaar.php';
+require_once '../src/Vzaar.php';
 
 Vzaar::$token = 'token'; //
 Vzaar::$secret = 'secret';
