@@ -1,3 +1,7 @@
+2015-01-23 JC <jozef@vzaar.com>
+
+  * paths in tests/ updated
+
 2015-01-19 JC <jozef@vzaar.com>
 
   * CURLFile added to s3 uploads (it fixes upload bug for older php versions e.g 5.5.20)
